// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiDatePicker is rendered 1`] = `
<span
  className="euiDatePicker euiDatePicker--shadow"
>
  <EuiFormControlLayout
    fullWidth={false}
    icon="calendar"
    isLoading={false}
  >
    <EuiValidatableControl>
      <ContextConsumer>
        <Component />
      </ContextConsumer>
    </EuiValidatableControl>
  </EuiFormControlLayout>
</span>
`;

exports[`EuiDatePicker is rendered 2`] = `
<DatePicker
  accessibleMode={true}
  adjustDateOnChange={true}
  allowSameDay={false}
  aria-label="aria-label"
  className="euiDatePicker euiFieldText euiFieldText--withIcon testClass1 testClass2"
  data-test-subj="test subject string"
  dateFormat="MM/DD/YYYY"
  dateFormatCalendar="MMMM YYYY"
  disabled={false}
  disabledKeyboardNavigation={false}
  dropdownMode="scroll"
  monthsShown={1}
  nextMonthButtonLabel="Next month"
  onBlur={[Function]}
  onChange={[Function]}
  onClickOutside={[Function]}
  onFocus={[Function]}
  onInputClick={[Function]}
  onInputError={[Function]}
  onKeyDown={[Function]}
  onMonthChange={[Function]}
  onSelect={[Function]}
  onYearChange={[Function]}
  popperPlacement="downLeft"
  preventOpenOnFocus={false}
  previousMonthButtonLabel="Previous Month"
  readOnly={false}
  renderDayContents={[Function]}
  shouldCloseOnSelect={true}
  showMonthDropdown={true}
  showTimeSelect={false}
  showYearDropdown={true}
  strictParsing={false}
  timeCaption="Time"
  timeFormat="hh:mm A"
  timeIntervals={30}
  withPortal={false}
  yearDropdownItemNumber={7}
/>
`;

exports[`EuiDatePicker localization accepts the locale prop 1`] = `
<span
  class="euiDatePicker euiDatePicker--shadow euiDatePicker--inline"
>
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <div
        class="react-datepicker"
      >
        <div
          class="react-datepicker__triangle"
        />
        <button
          class="react-datepicker__navigation react-datepicker__navigation--previous"
          type="button"
        >
          Previous Month
        </button>
        <button
          class="react-datepicker__navigation react-datepicker__navigation--next"
          type="button"
        >
          Next month
        </button>
        <div
          class="react-datepicker__month-container"
        >
          <div
            class="react-datepicker__header"
          >
            <div
              class="react-datepicker__current-month react-datepicker__current-month--hasYearDropdown react-datepicker__current-month--hasMonthDropdown"
            >
              7월 2019
            </div>
            <div
              class="react-datepicker__header__dropdown react-datepicker__header__dropdown--scroll"
            >
              <div
                class="react-datepicker__month-dropdown-container react-datepicker__month-dropdown-container--scroll"
              >
                <div
                  aria-label="Button. Open the month selector. 7월 is currently selected."
                  class="react-datepicker__month-read-view"
                  style="visibility: visible;"
                  tabindex="0"
                >
                  <span
                    class="react-datepicker__month-read-view--down-arrow"
                  />
                  <span
                    class="react-datepicker__month-read-view--selected-month"
                  >
                    7월
                  </span>
                </div>
              </div>
              <div
                class="react-datepicker__year-dropdown-container react-datepicker__year-dropdown-container--scroll"
              >
                <div
                  aria-label="Button. Open the year selector. 2019 is currently selected."
                  class="react-datepicker__year-read-view"
                  style="visibility: visible;"
                  tabindex="0"
                >
                  <span
                    class="react-datepicker__year-read-view--down-arrow"
                  />
                  <span
                    class="react-datepicker__year-read-view--selected-year"
                  >
                    2019
                  </span>
                </div>
              </div>
            </div>
            <div
              class="react-datepicker__day-names"
            >
              <div
                class="react-datepicker__day-name"
              >
                일
              </div>
              <div
                class="react-datepicker__day-name"
              >
                월
              </div>
              <div
                class="react-datepicker__day-name"
              >
                화
              </div>
              <div
                class="react-datepicker__day-name"
              >
                수
              </div>
              <div
                class="react-datepicker__day-name"
              >
                목
              </div>
              <div
                class="react-datepicker__day-name"
              >
                금
              </div>
              <div
                class="react-datepicker__day-name"
              >
                토
              </div>
            </div>
          </div>
          <div
            aria-label="7월, 2019"
            class="react-datepicker__month react-datepicker__month--accessible"
            role="listbox"
            tabindex="0"
          >
            <span
              class="euiScreenReaderOnly"
            />
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-30"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend react-datepicker__day--outside-month"
                role="option"
              >
                30
              </div>
              <div
                aria-label="day-1"
                class="react-datepicker__day react-datepicker__day--mon react-datepicker__day--selected"
                role="option"
              >
                1
              </div>
              <div
                aria-label="day-2"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                2
              </div>
              <div
                aria-label="day-3"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                3
              </div>
              <div
                aria-label="day-4"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                4
              </div>
              <div
                aria-label="day-5"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                5
              </div>
              <div
                aria-label="day-6"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                6
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-7"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                7
              </div>
              <div
                aria-label="day-8"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                8
              </div>
              <div
                aria-label="day-9"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                9
              </div>
              <div
                aria-label="day-10"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                10
              </div>
              <div
                aria-label="day-11"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                11
              </div>
              <div
                aria-label="day-12"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                12
              </div>
              <div
                aria-label="day-13"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                13
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-14"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                14
              </div>
              <div
                aria-label="day-15"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                15
              </div>
              <div
                aria-label="day-16"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                16
              </div>
              <div
                aria-label="day-17"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                17
              </div>
              <div
                aria-label="day-18"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                18
              </div>
              <div
                aria-label="day-19"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                19
              </div>
              <div
                aria-label="day-20"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                20
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-21"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                21
              </div>
              <div
                aria-label="day-22"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                22
              </div>
              <div
                aria-label="day-23"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                23
              </div>
              <div
                aria-label="day-24"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                24
              </div>
              <div
                aria-label="day-25"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                25
              </div>
              <div
                aria-label="day-26"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                26
              </div>
              <div
                aria-label="day-27"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                27
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-28"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                28
              </div>
              <div
                aria-label="day-29"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                29
              </div>
              <div
                aria-label="day-30"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                30
              </div>
              <div
                aria-label="day-31"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                31
              </div>
              <div
                aria-label="day-1"
                class="react-datepicker__day react-datepicker__day--thu react-datepicker__day--outside-month"
                role="option"
              >
                1
              </div>
              <div
                aria-label="day-2"
                class="react-datepicker__day react-datepicker__day--fri react-datepicker__day--outside-month"
                role="option"
              >
                2
              </div>
              <div
                aria-label="day-3"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend react-datepicker__day--outside-month"
                role="option"
              >
                3
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`EuiDatePicker localization inherits locale from context 1`] = `
<span
  class="euiDatePicker euiDatePicker--shadow euiDatePicker--inline"
>
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <div
        class="react-datepicker"
      >
        <div
          class="react-datepicker__triangle"
        />
        <button
          class="react-datepicker__navigation react-datepicker__navigation--previous"
          type="button"
        >
          Previous Month
        </button>
        <button
          class="react-datepicker__navigation react-datepicker__navigation--next"
          type="button"
        >
          Next month
        </button>
        <div
          class="react-datepicker__month-container"
        >
          <div
            class="react-datepicker__header"
          >
            <div
              class="react-datepicker__current-month react-datepicker__current-month--hasYearDropdown react-datepicker__current-month--hasMonthDropdown"
            >
              juillet 2019
            </div>
            <div
              class="react-datepicker__header__dropdown react-datepicker__header__dropdown--scroll"
            >
              <div
                class="react-datepicker__month-dropdown-container react-datepicker__month-dropdown-container--scroll"
              >
                <div
                  aria-label="Button. Open the month selector. juillet is currently selected."
                  class="react-datepicker__month-read-view"
                  style="visibility: visible;"
                  tabindex="0"
                >
                  <span
                    class="react-datepicker__month-read-view--down-arrow"
                  />
                  <span
                    class="react-datepicker__month-read-view--selected-month"
                  >
                    juillet
                  </span>
                </div>
              </div>
              <div
                class="react-datepicker__year-dropdown-container react-datepicker__year-dropdown-container--scroll"
              >
                <div
                  aria-label="Button. Open the year selector. 2019 is currently selected."
                  class="react-datepicker__year-read-view"
                  style="visibility: visible;"
                  tabindex="0"
                >
                  <span
                    class="react-datepicker__year-read-view--down-arrow"
                  />
                  <span
                    class="react-datepicker__year-read-view--selected-year"
                  >
                    2019
                  </span>
                </div>
              </div>
            </div>
            <div
              class="react-datepicker__day-names"
            >
              <div
                class="react-datepicker__day-name"
              >
                lu
              </div>
              <div
                class="react-datepicker__day-name"
              >
                ma
              </div>
              <div
                class="react-datepicker__day-name"
              >
                me
              </div>
              <div
                class="react-datepicker__day-name"
              >
                je
              </div>
              <div
                class="react-datepicker__day-name"
              >
                ve
              </div>
              <div
                class="react-datepicker__day-name"
              >
                sa
              </div>
              <div
                class="react-datepicker__day-name"
              >
                di
              </div>
            </div>
          </div>
          <div
            aria-label="juillet, 2019"
            class="react-datepicker__month react-datepicker__month--accessible"
            role="listbox"
            tabindex="0"
          >
            <span
              class="euiScreenReaderOnly"
            />
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-1"
                class="react-datepicker__day react-datepicker__day--mon react-datepicker__day--selected"
                role="option"
              >
                1
              </div>
              <div
                aria-label="day-2"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                2
              </div>
              <div
                aria-label="day-3"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                3
              </div>
              <div
                aria-label="day-4"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                4
              </div>
              <div
                aria-label="day-5"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                5
              </div>
              <div
                aria-label="day-6"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                6
              </div>
              <div
                aria-label="day-7"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                7
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-8"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                8
              </div>
              <div
                aria-label="day-9"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                9
              </div>
              <div
                aria-label="day-10"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                10
              </div>
              <div
                aria-label="day-11"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                11
              </div>
              <div
                aria-label="day-12"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                12
              </div>
              <div
                aria-label="day-13"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                13
              </div>
              <div
                aria-label="day-14"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                14
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-15"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                15
              </div>
              <div
                aria-label="day-16"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                16
              </div>
              <div
                aria-label="day-17"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                17
              </div>
              <div
                aria-label="day-18"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                18
              </div>
              <div
                aria-label="day-19"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                19
              </div>
              <div
                aria-label="day-20"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                20
              </div>
              <div
                aria-label="day-21"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                21
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-22"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                22
              </div>
              <div
                aria-label="day-23"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                23
              </div>
              <div
                aria-label="day-24"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                24
              </div>
              <div
                aria-label="day-25"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                25
              </div>
              <div
                aria-label="day-26"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                26
              </div>
              <div
                aria-label="day-27"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                27
              </div>
              <div
                aria-label="day-28"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                28
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-29"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                29
              </div>
              <div
                aria-label="day-30"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                30
              </div>
              <div
                aria-label="day-31"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                31
              </div>
              <div
                aria-label="day-1"
                class="react-datepicker__day react-datepicker__day--thu react-datepicker__day--outside-month"
                role="option"
              >
                1
              </div>
              <div
                aria-label="day-2"
                class="react-datepicker__day react-datepicker__day--fri react-datepicker__day--outside-month"
                role="option"
              >
                2
              </div>
              <div
                aria-label="day-3"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend react-datepicker__day--outside-month"
                role="option"
              >
                3
              </div>
              <div
                aria-label="day-4"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend react-datepicker__day--outside-month"
                role="option"
              >
                4
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`EuiDatePicker popoverPlacement upRight is rendered 1`] = `
<EuiDatePicker
  adjustDateOnChange={true}
  aria-label="aria-label"
  className="testClass1 testClass2"
  data-test-subj="test subject string"
  dateFormat="MM/DD/YYYY"
  fullWidth={false}
  inputRef={[Function]}
  isLoading={false}
  popoverPlacement="upRight"
  shadow={true}
  shouldCloseOnSelect={true}
  showIcon={true}
  showTimeSelect={false}
  timeFormat="hh:mm A"
>
  <span
    className="euiDatePicker euiDatePicker--shadow"
  >
    <EuiFormControlLayout
      fullWidth={false}
      icon="calendar"
      isLoading={false}
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <EuiValidatableControl>
            <DatePicker
              accessibleMode={true}
              adjustDateOnChange={true}
              allowSameDay={false}
              aria-label="aria-label"
              className="euiDatePicker euiFieldText euiFieldText--withIcon testClass1 testClass2"
              data-test-subj="test subject string"
              dateFormat="MM/DD/YYYY"
              dateFormatCalendar="MMMM YYYY"
              disabled={false}
              disabledKeyboardNavigation={false}
              dropdownMode="scroll"
              monthsShown={1}
              nextMonthButtonLabel="Next month"
              onBlur={[Function]}
              onChange={[Function]}
              onClickOutside={[Function]}
              onFocus={[Function]}
              onInputClick={[Function]}
              onInputError={[Function]}
              onKeyDown={[Function]}
              onMonthChange={[Function]}
              onSelect={[Function]}
              onYearChange={[Function]}
              popperPlacement="upRight"
              preventOpenOnFocus={false}
              previousMonthButtonLabel="Previous Month"
              readOnly={false}
              renderDayContents={[Function]}
              shouldCloseOnSelect={true}
              showMonthDropdown={true}
              showTimeSelect={false}
              showYearDropdown={true}
              strictParsing={false}
              timeCaption="Time"
              timeFormat="hh:mm A"
              timeIntervals={30}
              withPortal={false}
              yearDropdownItemNumber={7}
            >
              <EuiPopover
                anchorPosition="upRight"
                buffer={0}
                button={
                  <div
                    className="react-datepicker__input-container"
                  >
                    <input
                      aria-label="Press the down key to open a popover containing a calendar."
                      className="euiDatePicker euiFieldText euiFieldText--withIcon testClass1 testClass2"
                      disabled={false}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      readOnly={false}
                      type="text"
                      value=""
                    />
                  </div>
                }
                closePopover={[Function]}
                display="block"
                hasArrow={false}
                isOpen={false}
                ownFocus={false}
                panelPaddingSize="none"
                panelRef={[Function]}
              >
                <EuiPopoverClass
                  anchorPosition="upRight"
                  buffer={0}
                  button={
                    <div
                      className="react-datepicker__input-container"
                    >
                      <input
                        aria-label="Press the down key to open a popover containing a calendar."
                        className="euiDatePicker euiFieldText euiFieldText--withIcon testClass1 testClass2"
                        disabled={false}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        readOnly={false}
                        type="text"
                        value=""
                      />
                    </div>
                  }
                  closePopover={[Function]}
                  display="block"
                  hasArrow={false}
                  isOpen={false}
                  ownFocus={false}
                  panelPaddingSize="none"
                  panelRef={[Function]}
                  theme={
                    Object {
                      "colorMode": "LIGHT",
                      "euiTheme": Object {
                        "animation": Object {
                          "bounce": "cubic-bezier(.34, 1.61, .7, 1)",
                          "extraFast": "90ms",
                          "extraSlow": "500ms",
                          "fast": "150ms",
                          "normal": "250ms",
                          "resistance": "cubic-bezier(.694, .0482, .335, 1)",
                          "slow": "350ms",
                        },
                        "base": 16,
                        "border": Object {
                          "color": "#D3DAE6",
                          "editable": "2px dotted #D3DAE6",
                          "radius": Object {
                            "medium": "6px",
                            "small": "4px",
                          },
                          "thick": "2px solid #D3DAE6",
                          "thin": "1px solid #D3DAE6",
                          "width": Object {
                            "thick": "2px",
                            "thin": "1px",
                          },
                        },
                        "breakpoint": Object {
                          "l": 992,
                          "m": 768,
                          "s": 575,
                          "xl": 1200,
                          "xs": 0,
                        },
                        "colors": Object {
                          "accent": "#F04E98",
                          "accentText": "#ba3d76",
                          "body": "#f7f8fc",
                          "danger": "#BD271E",
                          "dangerText": "#bd271e",
                          "darkShade": "#69707D",
                          "darkestShade": "#343741",
                          "disabled": "#ABB4C4",
                          "disabledText": "#a2abba",
                          "emptyShade": "#FFF",
                          "fullShade": "#000",
                          "ghost": "#FFF",
                          "highlight": "#fff9e8",
                          "ink": "#000",
                          "lightShade": "#D3DAE6",
                          "lightestShade": "#F1F4FA",
                          "link": "#006bb8",
                          "mediumShade": "#98A2B3",
                          "primary": "#07C",
                          "primaryText": "#006bb8",
                          "shadow": "#000",
                          "subduedText": "#646a77",
                          "success": "#00BFB3",
                          "successText": "#007871",
                          "text": "#343741",
                          "title": "#1a1c21",
                          "warning": "#FEC514",
                          "warningText": "#83650a",
                        },
                        "focus": Object {
                          "color": "currentColor",
                          "width": "2px",
                        },
                        "font": Object {
                          "baseline": 4,
                          "body": Object {
                            "scale": "s",
                            "weight": "regular",
                          },
                          "family": "'Inter', BlinkMacSystemFont, Helvetica, Arial, sans-serif",
                          "familyCode": "'Roboto Mono', Menlo, Courier, monospace",
                          "familySerif": "Georgia, Times, Times New Roman, serif",
                          "featureSettings": "'calt' 1, 'kern' 1, 'liga' 1",
                          "lineHeightMultiplier": 1.5,
                          "scale": Object {
                            "l": 1.375,
                            "m": 1,
                            "s": 0.875,
                            "xl": 1.6875,
                            "xs": 0.75,
                            "xxl": 2.125,
                            "xxs": 0.6875,
                            "xxxs": 0.5625,
                          },
                          "title": Object {
                            "weight": "bold",
                          },
                          "weight": Object {
                            "bold": 700,
                            "light": 300,
                            "medium": 500,
                            "regular": 400,
                            "semiBold": 600,
                          },
                        },
                        "levels": Object {
                          "content": 0,
                          "flyout": 1000,
                          "header": 1000,
                          "mask": 6000,
                          "maskBelowHeader": 1000,
                          "menu": 2000,
                          "modal": 8000,
                          "navigation": 6000,
                          "toast": 9000,
                        },
                        "size": Object {
                          "base": "16px",
                          "l": "24px",
                          "m": "12px",
                          "s": "8px",
                          "xl": "32px",
                          "xs": "4px",
                          "xxl": "40px",
                          "xxs": "2px",
                          "xxxl": "48px",
                          "xxxxl": "64px",
                        },
                        "themeName": "EUI_THEME_AMSTERDAM",
                      },
                      "modifications": Object {},
                    }
                  }
                >
                  <EuiOutsideClickDetector
                    onOutsideClick={[Function]}
                  >
                    <div
                      css="unknown styles"
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchStart={[Function]}
                    >
                      <Insertion
                        cache={
                          Object {
                            "insert": [Function],
                            "inserted": Object {
                              "4fdlpz-EuiPopoverClass": true,
                              "fwe1lp-euiPopover-EuiPopoverClass": true,
                            },
                            "key": "css",
                            "nonce": undefined,
                            "registered": Object {},
                            "sheet": StyleSheet {
                              "_alreadyInsertedOrderInsensitiveRule": true,
                              "_insertTag": [Function],
                              "before": null,
                              "container": <head>
                                <style
                                  data-emotion="css"
                                  data-s=""
                                >
                                  
                                  .css-fwe1lp-euiPopover-EuiPopoverClass{position:relative;vertical-align:middle;max-width:100%;display:block;}
                                </style>
                                <style
                                  data-emotion="css"
                                  data-s=""
                                >
                                  
                                  .css-4fdlpz-EuiPopoverClass{display:block;}
                                </style>
                              </head>,
                              "ctr": 2,
                              "insertionPoint": undefined,
                              "isSpeedy": false,
                              "key": "css",
                              "nonce": undefined,
                              "prepend": undefined,
                              "tags": Array [
                                <style
                                  data-emotion="css"
                                  data-s=""
                                >
                                  
                                  .css-fwe1lp-euiPopover-EuiPopoverClass{position:relative;vertical-align:middle;max-width:100%;display:block;}
                                </style>,
                                <style
                                  data-emotion="css"
                                  data-s=""
                                >
                                  
                                  .css-4fdlpz-EuiPopoverClass{display:block;}
                                </style>,
                              ],
                            },
                          }
                        }
                        isStringTag={true}
                        serialized={
                          Object {
                            "map": undefined,
                            "name": "fwe1lp-euiPopover-EuiPopoverClass",
                            "next": undefined,
                            "styles": "position:relative;vertical-align:middle;max-width:100%;label:euiPopover;;;display: block;label:EuiPopoverClass;;;",
                            "toString": [Function],
                          }
                        }
                      />
                      <div
                        className="euiPopover css-fwe1lp-euiPopover-EuiPopoverClass"
                        onKeyDown={[Function]}
                        onMouseDown={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchStart={[Function]}
                      >
                        <div
                          css="unknown styles"
                        >
                          <Insertion
                            cache={
                              Object {
                                "insert": [Function],
                                "inserted": Object {
                                  "4fdlpz-EuiPopoverClass": true,
                                  "fwe1lp-euiPopover-EuiPopoverClass": true,
                                },
                                "key": "css",
                                "nonce": undefined,
                                "registered": Object {},
                                "sheet": StyleSheet {
                                  "_alreadyInsertedOrderInsensitiveRule": true,
                                  "_insertTag": [Function],
                                  "before": null,
                                  "container": <head>
                                    <style
                                      data-emotion="css"
                                      data-s=""
                                    >
                                      
                                      .css-fwe1lp-euiPopover-EuiPopoverClass{position:relative;vertical-align:middle;max-width:100%;display:block;}
                                    </style>
                                    <style
                                      data-emotion="css"
                                      data-s=""
                                    >
                                      
                                      .css-4fdlpz-EuiPopoverClass{display:block;}
                                    </style>
                                  </head>,
                                  "ctr": 2,
                                  "insertionPoint": undefined,
                                  "isSpeedy": false,
                                  "key": "css",
                                  "nonce": undefined,
                                  "prepend": undefined,
                                  "tags": Array [
                                    <style
                                      data-emotion="css"
                                      data-s=""
                                    >
                                      
                                      .css-fwe1lp-euiPopover-EuiPopoverClass{position:relative;vertical-align:middle;max-width:100%;display:block;}
                                    </style>,
                                    <style
                                      data-emotion="css"
                                      data-s=""
                                    >
                                      
                                      .css-4fdlpz-EuiPopoverClass{display:block;}
                                    </style>,
                                  ],
                                },
                              }
                            }
                            isStringTag={true}
                            serialized={
                              Object {
                                "map": undefined,
                                "name": "4fdlpz-EuiPopoverClass",
                                "next": undefined,
                                "styles": "display: block;label:EuiPopoverClass;;;",
                                "toString": [Function],
                              }
                            }
                          />
                          <div
                            className="euiPopover__anchor css-4fdlpz-EuiPopoverClass"
                          >
                            <div
                              className="react-datepicker__input-container"
                            >
                              <input
                                aria-label="Press the down key to open a popover containing a calendar."
                                className="euiDatePicker euiFieldText euiFieldText--withIcon testClass1 testClass2"
                                disabled={false}
                                onBlur={[Function]}
                                onChange={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                readOnly={false}
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </EuiOutsideClickDetector>
                </EuiPopoverClass>
              </EuiPopover>
            </DatePicker>
          </EuiValidatableControl>
          <EuiFormControlLayoutIcons
            icon="calendar"
            isLoading={false}
          >
            <div
              className="euiFormControlLayoutIcons"
            >
              <EuiFormControlLayoutCustomIcon
                size="m"
                type="calendar"
              >
                <span
                  className="euiFormControlLayoutCustomIcon"
                >
                  <EuiIcon
                    aria-hidden="true"
                    className="euiFormControlLayoutCustomIcon__icon"
                    size="m"
                    type="calendar"
                  >
                    <span
                      aria-hidden="true"
                      className="euiFormControlLayoutCustomIcon__icon"
                      data-euiicon-type="calendar"
                      size="m"
                    />
                  </EuiIcon>
                </span>
              </EuiFormControlLayoutCustomIcon>
            </div>
          </EuiFormControlLayoutIcons>
        </div>
      </div>
    </EuiFormControlLayout>
  </span>
</EuiDatePicker>
`;
